# timetools

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: Utility.h  timetools.h
lib/src/: EstimateTscFrequency.cpp  Stopwatch.cpp  Waiter.cpp  busyWait.asm  getTscFrequency.asm  hasGoodCpuTimer.asm  setThisThreadAffinity.cpp
test/: CMakeLists.txt
test/src/: TestBasic.cpp
